--- a/templates/rua/rua_form.html
+++ b/templates/rua/rua_form.html
@@ -1,10 +1,25 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block title %}Create/Update Rua{% endblock %}
 
 {% block content %}
-<h1>{{ form.instance.pk|default_if_none:'' }} Nome da Rua</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Salvar</button>
-</form>
+<div class="row">
+    <div class="col-md-auto mx-auto mt-2 ">
+        <div class="card auth-card">
+            <div class="card-body ">
+                <h2 class="card-title">Create/Update Rua</h2>
+                <h4>Nome da rua/avenida/travessa :</h4>
+                <p>Ex: Rua Manoel Elpidio, Av. Coronel Martiniano, Tv. Antônio Vieira</p>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button class="btn btn-success" type="submit">Salvar</button>
+                </form>
+            
+            </div>
+        </div>       
+    </div>    
+</div>
+
 {% endblock %}
