--- a/templates/rua/rua_list.html
+++ b/templates/rua/rua_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Lista de Ruas</h1>
-<a href="{% url 'rua_create' %}" class="btn btn-success mb-3">Adicionar Rua</a>
+<a href="{% url 'rua_create' %}" class="btn btn-secondary mb-3">Adicionar Rua</a>
 <table class="table table-striped">
     <thead>
         <tr>
