--- a/templates/ciclo/ciclo_form.html
+++ b/templates/ciclo/ciclo_form.html
@@ -1,10 +1,23 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load crispy_forms_tags %}
+
+{% block title %}Create/Update Ciclo{% endblock %}
 
 {% block content %}
-<h1>Create/Update Ciclo</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
+<div class="row">
+    <div class="col-md-auto mx-auto mt-2 ">
+        <div class="card auth-card">
+            <div class="card-body ">
+                <h2 class="card-title">Create/Update Ciclo</h2>
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button class="btn btn-success" type="submit">Salvar</button>
+                </form>
+            
+            </div>
+        </div>       
+    </div>    
+</div>
+
 {% endblock %}
