--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -14,7 +14,7 @@
                     {% csrf_token %}
                     {{ form | crispy }}
                     <button class="btn btn-success" type="submit">Log In</button>
-                    <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
+                    <a href="{% url 'home' %}" class="btn btn-primary">Voltar</a>
                 </form>                
             </div>
         </div>
