:sparkles: feat: configuração de envio de email com gmail,mod: templates

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -7,7 +7,7 @@
 
 {% if validlink %}
 
-<h1>Set a new password!</h1>
+<h1>Digite uma nova senha!</h1>
 <form method="POST">
     {% csrf_token %}
     {{ form | crispy }}
