--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <div>
         {% include "navbar.html" %}
     </div>
-    <div >
+    <div class="container">
         {% block content %}
         {% endblock content %}
     </div>
