--- a/templates/boletim/lira_boletim_list.html
+++ b/templates/boletim/lira_boletim_list.html
@@ -8,7 +8,7 @@
     Numero de boletins : {{ object_list.count }} 
 </section>
 
-<div class="container">
+<div >
     <table class="table table-striped">
         <caption>Boletins</caption>
         <thead class="thead-dark">
