--- a/templates/bairro/bairro_form.html
+++ b/templates/bairro/bairro_form.html
@@ -1,6 +1,32 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
+
+{% block title %}Create/Update Bairro{% endblock %}
 
 {% block content %}
+<div class="row">
+    <div class="col-md-auto mx-auto mt-2 ">
+        <div class="card auth-card">
+            <div class="card-body ">
+                <h2 class="card-title">Create/Update Bairro</h2>
+                
+                <form method="post">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <button class="btn btn-success" type="submit">Salvar</button>
+                </form>
+            
+            </div>
+        </div>       
+    </div>    
+</div>
+
+{% endblock %}
+
+
+
+
+{% block conteudo %}
 <h1>Create/Update Bairro</h1>
 <form method="post">
     {% csrf_token %}
