--- a/templates/bairro/bairro_list.html
+++ b/templates/bairro/bairro_list.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 <h1>Bairros</h1>
-<a href="{% url 'bairro_create' %}">Create new Bairro</a>
-<table>
+<a href="{% url 'bairro_create' %}" class="btn btn-secondary mb-3">Create new Bairro</a>
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Sigla</th>            
             <th>Nome</th>
-            <th>Actions</th>
+            <th>Ações</th>
         </tr>
     </thead>
     <tbody>
@@ -17,9 +17,13 @@
             <td>{{ bairro.sigla }}</td>
             <td>{{ bairro.nome }}</td>
             <td>
-                <a href="{% url 'bairro_update' bairro.id %}">Update</a>
-                <a href="{% url 'bairro_delete' bairro.id %}">Delete</a>
+                <a href="{% url 'bairro_update' bairro.id %}" class="btn btn-primary btn-sm">Update</a>
+                <a href="{% url 'bairro_delete' bairro.id %}" class="btn btn-danger btn-sm" >Delete</a>
             </td>
+        </tr>
+        {% empty %}
+        <tr>
+            <td colspan="2">Nenhum bairro encontrado.</td>
         </tr>
         {% endfor %}
     </tbody>
