--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="">Olá {{ user.username }}!</a>
                 </li>
                 <!-- Se é chefe -->
-                {% elif user.is_authenticated and user.is_staff %}
+                {% elif user.is_staff %}
                 <li class="nav-item " data-toggle="pill">
                     <a class="nav-link" href="{% url 'lira_boletim_list' %}">Boletins</a>
                 </li>
@@ -40,9 +40,11 @@
                 <li class="nav-item" data-toggle="pill">
                     <a class="nav-link" href="{% url 'registrar' %}">registar Ace</a>
                 </li>  
+                {% if user.is_superuser%}
                 <li class="nav-item" data-toggle="pill">
                     <a class="nav-link" href="/admin">Admin</a>
                 </li>
+                {% endif %}
                 <li class="nav-item" data-toggle="pill">
                     <a class="nav-link" href="{% url 'sobre' %}">Sobre</a>
                 </li>                
