--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -44,6 +44,9 @@
                 <li class="nav-item" data-toggle="pill">
                     <a class="nav-link" href="/admin">Admin</a>
                 </li>
+                <li class="nav-item" data-toggle="pill">
+                    <a class="nav-link" href="admin/auth/user/">Usuários</a>
+                </li>
                 {% endif %}
                 <li class="nav-item" data-toggle="pill">
                     <a class="nav-link" href="{% url 'sobre' %}">Sobre</a>
